Dashboard (2014-08-05 shi)
==============================
Publisher links to publisher portals
Update description for new links


Development Portal (2014-08-02 shi)
==============================
Fixed padding for tables


Development Portal (2014-07-25 shi)
==============================
Fixed table padding for more figures
Changed Donor subheader
Added instruction to table
Hover titles for CRS and Sector / Donor titles
Added chunk names for CRS as data input
Changed class names for CRS as generic data input
Added new top level sorting of Sector / Donor tables
Fixed cursor for new top level upon hover


Development Portal (2014-07-24 shi)
==============================
Fixed padding sizes for tables
Fixed translations for Donor titles in tables
Changed Donor subtitle for tables to be more descriptive
Added sorting of columns for tables
Changed "View All" links to "Back to Donor / Sector list"
Fixed translations accordingly
Fixed hover states for donor/sector tables including translations
Fixed missing hover state for sector title in table
Fixed hover titles for CRS to reflect footer
Added description when "data is missing" for table links
Added CSV download link for tables
Added translations for new CSV download link
Fixed hover state for bar graphs in donor/sector activities
Added description under CRS to explain "-" in donor table


Development Portal (2014-07-23 shi)
==============================
New CSS for template system
Text CSS for Index page (countries name list)
Added IATI Registry link to SAVi
Changed CRS description from countries to donors
Added more descriptions for tables
Fixed pointer styles for tables


Development Portal (2014-07-08 shi)
==============================
Fixed bug view_sectors header
Changed SAVi data quality text


Dashboard (2014-06-25 shi)
==============================
CSS for invalid country codes
CSS cleanup
Dash overview text
New table columns and headers


Dashboard (2014-06-19 shi)
==============================