@@ -1,3 +1,8 @@
+Development Portal (2014-08-06 shi)
+==============================
+Linked "0" and "-" to description footer
+
+
 Dashboard (2014-08-05 shi)
 ==============================
 Publisher links to publisher portals
